syntax = "proto3";

option go_package = "./grpc";

service Raft {
    rpc ApplyLog(ApplyRequest) returns (ApplyResponse) {}
    rpc GetDetails(GetDetailsRequest) returns (GetDetailsResponse) {}
}

message GetDetailsRequest {
}

message GetDetailsResponse {
    string serverId = 1;
    int32 discoveryPort = 2;
}

message ApplyRequest {
    bytes request = 1;
}

message ApplyResponse {
    bytes response = 1;
}